Added Workaround for opening weblinks on unix systems