@@ -19,18 +19,18 @@ public final class OSUtility {
 	 * Preserved os name, since it won't change anyways and reading from a variable is faster.
 	 */
 	private final static String OS = System.getProperty("os.name").toLowerCase();
-	
+
 	private OSUtility() {
 		// Constructor to prevent instantiation
 	}
-	
+
 	/**
 	 * @return true if the system is windows (most likely), otherwise false
 	 */
 	public static boolean isWindows() {
 		return OS.startsWith("windows");
 	}
-	
+
 	/**
 	 * Opens a website using the default browser. It will automatically apply http:// infront of the
 	 * url if not existant already.
@@ -39,14 +39,22 @@ public final class OSUtility {
 	 *            website to visit
 	 */
 	public static void browse(final String urlAsString) {
-		final Desktop desktop = Desktop.getDesktop();
-		
-		try {
-			final String fixedUrl = StringUtility.fixUrlIfNecessary(urlAsString);
-			final URL url = new URL(fixedUrl);
-			desktop.browse(new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef()));
-		} catch (final IOException | URISyntaxException exception) {
-			Logging.log(Level.WARNING, "Couldn't visit website '" + urlAsString + "'", exception);
+		if (Desktop.isDesktopSupported()) {
+			/**
+			 * HACK
+			 * Workaround for Unix, since the Desktop Class seems to freeze the application unless the call is threaded.
+			 */
+			new Thread(() -> {
+				final Desktop desktop = Desktop.getDesktop();
+
+				try {
+					final String fixedUrl = StringUtility.fixUrlIfNecessary(urlAsString);
+					final URL url = new URL(fixedUrl);
+					desktop.browse(new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef()));
+				} catch (final IOException | URISyntaxException exception) {
+					Logging.log(Level.WARNING, "Couldn't visit website '" + urlAsString + "'", exception);
+				}
+			}).start();
 		}
 	}
 }
